fix: revert Collections.emptySet/emptyMap/emptyList to original API
Motivation:
Review feedback: prefer Collections.emptySet(), Collections.emptyMap(),
Collections.emptyList() over Set.of(), Map.of(), List.of() for empty
collections since they use well-known immutable singleton APIs.

Modification:
Revert empty collection conversions (Set.of() -> Collections.emptySet(),
Map.of() -> Collections.emptyMap(), List.of() -> Collections.emptyList())
while keeping non-empty Arrays.asList -> List.of and
Collections.singletonList -> List.of conversions.

Result:
Empty collections use the established Collections.empty* API while
non-empty collections use the modern List.of/Set.of/Map.of factories.