@@ -13,6 +13,7 @@
 
 package jdocs.typed.tutorial_4;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -119,7 +120,7 @@ public class DeviceManager extends AbstractBehavior<DeviceManager.Command> {
     if (ref != null) {
       ref.tell(request);
     } else {
-      request.replyTo.tell(new ReplyDeviceList(request.requestId, Set.of()));
+      request.replyTo.tell(new ReplyDeviceList(request.requestId, Collections.emptySet()));
     }
     return this;
   }
