@@ -13,6 +13,7 @@
 
 package jdocs.org.apache.pekko.persistence.typed.auction;
 
+import java.util.Collections;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -36,12 +37,12 @@ public final class AuctionState {
   }
 
   public static AuctionState notStarted() {
-    return new AuctionState(Optional.empty(), AuctionStatus.NOT_STARTED, List.of());
+    return new AuctionState(Optional.empty(), AuctionStatus.NOT_STARTED, Collections.emptyList());
   }
 
   public static AuctionState start(Auction auction) {
     return new AuctionState(
-        Optional.of(auction), AuctionStatus.UNDER_AUCTION, List.of());
+        Optional.of(auction), AuctionStatus.UNDER_AUCTION, Collections.emptyList());
   }
 
   public AuctionState withStatus(AuctionStatus status) {
