@@ -16,6 +16,7 @@ package org.apache.pekko.persistence.typed.javadsl;
 import static org.apache.pekko.actor.typed.javadsl.AskPattern.ask;
 
 import java.time.Duration;
+import java.util.Collections;
 import java.util.*;
 import java.util.concurrent.CompletionStage;
 import org.apache.pekko.actor.testkit.typed.javadsl.TestInbox;
@@ -324,7 +325,7 @@ public class PersistentActorCompileOnlyTest {
 
       @Override
       public EventsInFlight emptyState() {
-        return new EventsInFlight(0, Map.of());
+        return new EventsInFlight(0, Collections.emptyMap());
       }
 
       @Override
